# docu-flow

./: .gitignore  Design.md  Notes.md  STRUCTURE.md  TODO.md  config.py  main.py  pyproject.toml  sample.json
api/v1/: auth_utils.py  dependencies.py
api/v1/routes/: auth.py  conversations.py
api/v1/schemas/: auth.py  conversations.py
ingestion/: chunker.py  embedder.py  loader.py  vector_store.py
prompts/: chat.py  rag.py
providers/: base.py  factory.py  google.py  google_provider.py
services/: chat_service.py  conversation_service.py  rag_service.py
storage/: conversation.py  database.py  models.py
