[project]
name = "docuflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "jq>=1.11.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-google-vertexai>=3.2.2",
    "langchain-pinecone>=0.2.13",
    "langchain-text-splitters>=1.1.1",
    "langchain[google-genai]>=1.2.15",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptograhy]>=3.5.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
